<resources>
    <string name="title_home">Inicio</string>
    <string name="title_emergencys">Emergencias</string>
    <string name="title_profile">Perfil</string>
    <string name="title_hlc">HLC</string>
    <string name="title_gvp">GVP</string>

    <!--General-->
    <string name="text_list_empty">No hay ítems para mostrar</string>
    <string name="text_two_variable">%1$s %2$s</string>
    <string name="text_date">Fecha</string>
    <string name="text_cancel">Cancelar</string>
    <string name="text_accept">Aceptar</string>
    <string name="text_exit">Salir</string>
    <string name="text_save">Guardar</string>
    <string name="text_update">Actualizar</string>
    <string name="text_delete">Eliminar</string>
    <string name="text_confirm">Confirmar</string>
    <string name="text_next">Siguiente</string>
    <string name="text_back">Atrás</string>
    <string name="text_active">Activo</string>
    <string name="text_inactive">No disponible</string>
    <string name="msg_exit_dialog">Se perderá toda la información.\n¿Desea salir?</string>
    <string name="msg_delete_dialog">¿Desea eliminar esta información?</string>
    <string name="title_large_hlc">Comité de Enlace con los Hospitales</string>
    <string name="title_large_gvp">Grupo de Visita a Pacientes</string>
    <string name="text_members">Miembros</string>
    <string name="text_details">Detalles</string>

    <!--Errors-->
    <string name="error_field_empty">Campo obligatorio</string>
    <string name="error_email_invalid">Correo con formato inválido</string>
    <string name="error_email_repeated">Email ya registrado</string>
    <string name="error_password_incorrect">Contraseña inválida</string>
    <string name="error_password_length">Contraseña con al menos 6 caracteres</string>
    <string name="error_password_match">Contraseñas no coinciden</string>

    <!--Dialogs-->
    <string name="title_timepicker_dialog">Seleccione la hora</string>
    <string name="title_confirmation_dialog">Confirmar</string>

    <!--Login-->
    <string name="text_email">Correo electrónico</string>
    <string name="text_password">Contraseña</string>
    <string name="text_login">Iniciar Sesión</string>
    <string name="text_init_biometric">Iniciar con Huella</string>
    <string name="text_put_fingerprint">Coloque la huella</string>

    <!--Main-->
    <string name="welcome_mornning">Buenos días, %1$s</string>
    <string name="welcome_afternoon">Buenas tardes, %1$s</string>
    <string name="welcome_night">Buenas noches, %1$s</string>
    <string name="text_guard">Guardia CEH</string>
    <string name="title_share_dialog">Compartir con</string>

    <!--New Member-->
    <string name="text_new_member">Nuevo Miembro</string>
    <string name="text_monday">Lunes</string>
    <string name="text_tuesday">Martes</string>
    <string name="text_wendsday">Miércoles</string>
    <string name="text_thursday">Jueves</string>
    <string name="text_friday">Viernes</string>
    <string name="text_saturday">Sábado</string>
    <string name="text_sunday">Domingo</string>
    <string name="text_repeat_password">Repetir contraseña</string>
    <string name="text_permissions_role">Permisos otorgados</string>
    <string name="text_speciality">Especialidad</string>
    <string name="role_admin">Administrador</string>
    <string name="role_hlc">Miembro del comité</string>
    <string name="role_gvp">Miembro de visitas</string>
    <!--Members-->
    <string name="text_congregation_from">Congregación: %1$s</string>
    <string name="text_role_from">Permisos: %1$s</string>
    <string name="text_date_created_account_from">Creación de cuenta: %1$s</string>
    <string name="text_password_from">Contraseña: %1$s</string>

    <!--New Emergency-->
    <string name="text_notification">Notificación</string>
    <string name="text_patient">Paciente</string>
    <string name="text_hospital">Hospital</string>
    <string name="text_issue_medical">Problema médico</string>
    <!--New Emergency Notification-->
    <string name="text_new_emergency">Nueva Emergencia</string>
    <string name="date_call">Fecha/Hora de la llamada</string>
    <string name="person_call">Persona que llamó</string>
    <string name="information_person_call">Información de contacto de quien llamó</string>
    <string name="patient_needs_help">Paciente solicita ayuda del HLC</string>
    <string name="relationship_patient">Relación con el paciente</string>
    <!--New Emergency Patient-->
    <string name="patient_name">Nombre del paciente</string>
    <string name="text_male">Masculino</string>
    <string name="text_female">Femenino</string>
    <string name="text_age">Edad</string>
    <string name="text_comments">Comentarios</string>
    <string name="question_baptized_male">¿Bautizado?</string>
    <string name="question_baptized_female">¿Bautizada?</string>
    <string name="question_reputation">¿Buena reputación?</string>
    <string name="question_dpa">¿DPA completa?</string>
    <string name="text_label_patient_child">Marque la casilla si el paciente es un <b>menor o recién nacido</b></string>
    <string name="text_name_father">Nombre del padre</string>
    <string name="text_name_mother">Nombre de la madre</string>
    <string name="text_comments_child">Comentarios (situación familiar, reputación, etc.)</string>
    <string name="text_label_born">Recién nacidos</string>
    <string name="text_weight_born">Peso al nacer</string>
    <string name="text_age_born">Edad gestacional (semanas)</string>
    <string name="text_date_born">Fecha de nacimiento</string>
    <string name="text_label_apgar">Puntuación APGAR</string>
    <string name="text_apgar_init">En el nacimiento</string>
    <string name="text_apgar_five_minutes">A los 5 minutos</string>
    <string name="text_init_zero">0,00</string>
    <!--New Emergency Hospital-->
    <string name="text_hospital_name">Nombre del hospital</string>
    <string name="text_room">Habitación</string>
    <string name="text_phone">Teléfono</string>
    <string name="text_congregation">Congregación</string>
    <string name="text_name_olders_contacted">Nombre de los ancianos contactados</string>
    <string name="text_phone_olders_contacted">Teléfonos de contacto de los ancianos</string>
    <!--New Emergency Problem-->
    <string name="text_info_problem">Información sobre el problema médico</string>
    <string name="text_helper_problem"><b>Problema específico: </b>(¿Cuál es el diagnóstico médico?
        ¿Por qué se plantea la cuestión de la sangre: hemorragia, prematuro, anemia, etc.?)\n
        <b>Historial médico relevante: </b>(¿A qué se debe la crisis actual?)</string>
    <!--Emergency-->
    <string name="text_date_call_item">Fecha de llamada: %1$s</string>
    <string name="text_date_updated_item">Fecha de última actualización: %1$s</string>
    <string name="text_finish_emergency">Finalizar emergencia</string>
    <string name="msg_finish_dialog">Se descargará un archivo hlc-7-S y, luego, se borrarán todos los datos personales del paciente de este caso. Esta acción no se puede deshacer.\n¿Desea continuar?</string>
    <!-- Lab -->
    <string name="text_lab">Laboratorio</string>
    <string name="text_date_lab">Fecha/Hora en que se realizó</string>>
    <string name="text_hemoglobina">Hemoglobina (Hb g/dl)</string>
    <string name="text_hematocrito">Hematocrito (Hto %)</string>
    <string name="text_plaquetas">Plaquetas (Plts /μL)</string>
    <string name="text_others">Otros</string>
    <string name="text_list_empty_lab">Si no posee resultados de Laboratorio, presione Siguiente.</string>
    <string name="text_new_lab">Nuevos resultados</string>
    <string name="text_init_plaquetas">0,000</string>
    <!-- Doctor -->
    <string name="text_list_empty_doctor">Si no posee información sobre los médicos, presione Siguiente.</string>
    <string name="text_new_doctor">Agregar Doctor</string>
    <string name="text_doctor">Médico</string>
    <!-- Treatment -->
    <string name="text_treatment">Tratamiento</string>
    <string name="question_request_help_hlc">¿Se ha comunicado al personal médico que el paciente ha solicitado la ayuda del HLC?</string>
    <!-- Strategies -->
    <string name="text_strategies">Estrategias</string>
    <!-- Articles -->
    <string name="text_articles">Artículos médicos</string>
    <string name="question_doctor_colaborated">Tras revisar artículos de apoyo, ¿está el médico dispuesto a colaborar?</string>
    <!-- Consult -->
    <string name="text_name_second_doctor">Nombre del médico a consultar</string>
    <string name="text_contact_second_doctor">Contacto del médico a consultar</string>
    <string name="text_information">Información</string>
    <string name="text_consult_doctor">Consulta segundo médico</string>
    <!-- Transfer -->
    <string name="text_plans_confirmed">Planes de traslado confirmados</string>
    <string name="text_contacted_section_information">Se contactó con la Sección de Información sobre Hospitales (si el traslado es a un lugar fuera del área atendida por el HLC local)</string>
    <string name="text_hospital_transfer">Hospital al que se traslada</string>
    <string name="text_doctor_transfer">Médico que lo atenderá</string>
    <string name="text_contact_hospital_transfer">Número de contacto del hospital</string>
    <string name="text_transfer">Traslado</string>
    <!-- Results -->
    <string name="text_olders_contacted">Ancianos locales contactados para seguimiento</string>
    <string name="text_results_tracing">Resultados/Seguimiento</string>

    <!-- Profile -->
    <string name="text_about">Información de la App</string>>
    <string name="version_name">Versión %1$s</string>
    <string name="title_sign_out">Cerrar sesión</string>
    <string name="message_sign_out">¿Desea cerrar la sesión actual?</string>
    <string name="text_security">Seguridad</string>>
    <string name="text_summary_fingerprint">Iniciar sesión con huella</string>
    <string name="text_fingerprint">Biometría</string>
    <string name="key_fingerprint">fingerprint</string>

    <!-- Soon -->
    <string name="title_soon">¡Próximamente!</string>>
    <string name="message_soon">Esta función estará disponible en una versión muy pronto</string>

    <!-- PDF -->
    <string name="title_pdf">Hoja de trabajo para emergencias médicas</string>>

</resources>